package enums;

public enum Country {
    USA,
    INDIA,
    THAILAND,
    NORTH_KOREA;
}